--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
-GOOGLE_CLIENT_SECRET=
-GOOGLE_CLIENT_ID=
-AUTH_SECRET=
-NEXT_PUBLIC_VENDOR_PRIVATE_KEY=
-NEXT_PUBLIC_VENDOR_SWA=
+VITE_OKTO_ENVIRONMENT="sandbox"
+VITE_CLIENT_PRIVATE_KEY=""
+VITE_CLIENT_SWA=""
+VITE_GOOGLE_CLIENT_SECRET=""
+VITE_GOOGLE_CLIENT_ID=""
