--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "format": "prettier --write .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@okto_web3/react-sdk": "^0.2.0",
+    "@okto_web3/react-sdk": "^0.2.1",
     "@react-oauth/google": "^0.12.1",
     "buffer": "^6.0.3",
     "react": "^18.3.1",
@@ -28,6 +29,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
+    "prettier": "^3.5.2",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
